@@ -1,4 +1,11 @@
-﻿shmuel 28.07.2014 15:40:16 +0200 - build 407
+﻿shmuel 01.08.2014 12:38:19 +0200 - build 408
+
+1. LuaFAR + generic plugin: уточнение 382; плагин падал при следующих обстоятельствах:
+   - из макроса A добавляем новый макрос B посредством far.MacroAdd, параметр callback - функция;
+   - после завершения макроса A вызываем макрос B;
+   - падаем, т.к. в callback() происходит обращение к уже невалидному lua_State макроса A.
+
+shmuel 28.07.2014 15:40:16 +0200 - build 407
 
 1. LuaFAR + generic plugin: новая функция far.SubscribeDialogDrawEvents.
 
